# litesvm

crates/deno-bindgen-cli/: Cargo.toml  cargo.rs  dlfcn.rs  main.rs
crates/deno-litesvm/: Cargo.toml  Makefile  README.md  client.test.ts  client.ts  mod.test.ts  mod.ts  solana.ts  syscall_clock.test.ts
crates/deno-litesvm/bindings/: litesvm.ts
crates/deno-litesvm/src/: lib.rs
crates/litesvm/test_programs/: Cargo.toml
crates/litesvm/test_programs/realloc-clock/: Cargo.toml
crates/litesvm/test_programs/realloc-clock/src/: lib.rs
