[package]
name = "litesvm-deno"
description = "Native Deno bindings for LiteSVM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode.workspace = true
deno_bindgen = "0.9.0-alpha"
litesvm = { workspace = true, features = ["serde", "precompiles", "nodejs-internal"] }
linkme = "0.3"
once_cell = "1.19"
serde = { workspace = true, features = ["derive"] }
solana-hash.workspace = true
solana-account.workspace = true
solana-pubkey.workspace = true
solana-signature.workspace = true
solana-transaction.workspace = true
solana-transaction-error = { workspace = true, features = ["serde"] }

